hopefully fixed a display issue on mobile

--- a/client/src/components/dice/Dice.css
+++ b/client/src/components/dice/Dice.css
@@ -58,6 +58,7 @@
   .input {
     width: 80px;
     height: 40px;
+    margin: 10px;
   }
 
   .button {
